--- a/CinemaManagementSystemClient/CinemaManagementSystemClient.csproj
+++ b/CinemaManagementSystemClient/CinemaManagementSystemClient.csproj
@@ -51,27 +51,33 @@
     <Compile Include="BookingForm.Designer.cs">
       <DependentUpon>BookingForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="ClientNet.cs" />
+    <Compile Include="BusinessModelManager.cs" />
+    <Compile Include="NetConnection.cs" />
     <Compile Include="ConnectForm.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="ConnectForm.Designer.cs">
       <DependentUpon>ConnectForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="DataParser.cs" />
     <Compile Include="FilmDescriptionForm.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="FilmDescriptionForm.Designer.cs">
       <DependentUpon>FilmDescriptionForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Hall.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Movie.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Show.cs" />
+    <Compile Include="Ticket.cs" />
     <EmbeddedResource Include="BookingForm.resx">
       <DependentUpon>BookingForm.cs</DependentUpon>
     </EmbeddedResource>
