--- a/CinemaManagementSystemClient/CinemaManagementSystemClient.csproj
+++ b/CinemaManagementSystemClient/CinemaManagementSystemClient.csproj
@@ -45,6 +45,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AddFilmForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AddFilmForm.Designer.cs">
+      <DependentUpon>AddFilmForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="BookingForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -78,6 +84,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Show.cs" />
     <Compile Include="Ticket.cs" />
+    <EmbeddedResource Include="AddFilmForm.resx">
+      <DependentUpon>AddFilmForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="BookingForm.resx">
       <DependentUpon>BookingForm.cs</DependentUpon>
     </EmbeddedResource>
